--- a/index.html
+++ b/index.html
@@ -7,6 +7,42 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="calculator">
+        <div class="display">
+      <div class="expression" id="expression"></div>
+      <div id="result">0</div>
+    </div>
+    <div class="buttons">
+        <button id="ac" class="AC">AC</button>
+      <button id="c" class="C">C</button>
+      <button id="back">⌫</button>
+      <button class="operator">÷</button>
+
+      <button>7</button>
+      <button>8</button>
+      <button>9</button>
+      <button class="operator">&times</button>
+
+      <button>6</button>
+      <button>5</button>
+      <button>4</button>
+      <button class="operator">-</button>
+
+      <button>1</button>
+      <button>2</button>
+      <button>3</button>
+      <button class="operator">+</button>
+
+       <button id="sign">&#177;</button>
+      <button>0</button>
+      <button>.</button>
+      <button id="equals">%</button>
+
+       <button id="percent" class="span-2">=</button>
+
+    </div>
+        
+        </div>
     
 </body>
 </html>
